Image for alien game as well as link to game.

--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
 					<div class="fullByhalf"><div class="eachContent"></div></div>
 					<div class="fullByhalf"><div class="eachContent"></div></div>
 					<div class="fullByhalf"><div class="eachContent"></div></div>
-					<div class="halfByhalf"><div class="eachContent"></div></div>
-					<div class="halfByhalf"><div class="eachContent"></div></div>
-		
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
+					<div class="qbyq"><div class="eachContent"></div></div>
 				</div>
 				<div class="content hide" id="projects">
 		
 					<div class="fullByfull"><div class="eachContent"></div></div>
-					<div class="fullByhalf"><div class="eachContent"></div></div>
+					<div class="fullByhalf"><div class="eachContent"><a href="http://anothrnick.github.io/invasionGame/"><img src="css/images/aliengame.png"/ title="Alien Game" ></a></div></div>
 					<div class="halfByhalf"><div class="eachContent"></div></div>
 					<div class="halfByhalf"><div class="eachContent"></div></div>
 		
