--- a/index.html
+++ b/index.html
@@ -17,32 +17,35 @@
         <!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<style>
+			* {
+				box-sizing: border-box;
+				margin: 0;
+			}
 			html {
 				height: 100%;
 			}
 			body {
-			  background: #EFEFEF;
-			  height: 100%;
+			  	background: #EFEFEF;
+			  	height: 100%;
 			}
 
 			main {
-			  background: white;
-			  height: 100%;
-			  width: 100%;
-			  padding: 20px;
-			  display: flex;
-			  flex-direction: column;
-			  overflow: auto;
+			  	background: white;
+			  	height: 100%;
+			  	width: 100%;
+			  	display: flex;
+			  	justify-content: center;
+			  	align-items: center;
 			}
 
-			main span {
-			  padding: 20px;
-			  overflow: auto;
-			  color: #555;
-
+			main .content {
+				display: flex;
+				flex-direction: column;
+			  	color: #555;
+			  	margin-top: -15%;
 			}
 
-			main span i.fa {
+			main .content i.fa {
 				border-radius: 200px;
 				margin-right: 20px;
 				font-size: 30px;
@@ -68,47 +71,78 @@
 				/*background-color: #007bb5;*/
 			}
 
-			img{
-				height: 400px;
+			.title {
+				display: flex;
+				justify-content: center;
 			}
-			.ci {
+
+			.projects {
+				display: grid;
+				justify-content: center;
+				grid-template-columns: 300px;
+				grid-template-rows: 100px 100px 100px 100px;
+				grid-gap: 10px;
+				margin-top: 40px;
+			}
+
+			.project {
+				background-color: #EEE;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: 20px;
+				color: #EEE;
+				border-bottom: 4px solid transparent;
+				transition: border-color .5s;
+				border-radius: 2px;
+				position: relative;
+			}
+			.project:hover{
+				cursor: pointer;
+				text-decoration: none;
+				color: #EEE;
+				border-color: rgba(0,0,0,.2);
+			}
+
+			.project .fa {
+				color: #FFF;
 				position: absolute;
-				bottom: 0;
-				right: 0;
+				bottom: 2px;
+				right: 6px;
+				font-size: 18px !important;
+				margin: 0px !important;
 			}
-			.ci a {
-				font-size:10px;
-				float:right;
+
+			@media (min-width:468px) {
+				.projects {
+					grid-template-columns: 200px 200px;
+					grid-template-rows: 100px 100px;
+				}
 			}
+
 		</style>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        
         <main>
   
-		  <span>
-		     <h1>Nick Sjostrom</h1>
-		     <p>I'm just a web developer who enjoys building things</p>
-		     <p>
+		  <div class="content">
+		     <h1 class="title">Nicholas Sjostrom</h1>
+		     <p class="title">
 		     	<a href="mailto:nick@sjostrom.io"><i class="fa fa-envelope"></i></a>
 		     	<a href="https://github.com/anothrNick"><i class="fa fa-github"></i></a>
 		     	<a href="https://www.linkedin.com/in/nicksjostrom"><i class="fa fa-linkedin"></i></a>
 		     	<a href="https://twitter.com/nickShosh"><i class="fa fa-twitter"></i></a>
 		    </p>
-		  </span>
+
+		    <div class="projects">
+		    	<a class="project" href="https://pingpongpal.com" style="background-color:#16a085;">Ping Pong Pal <i class="fa fa-globe"></i></a>
+		    	<a class="project" href="https://res.sjostrom.io" style="background-color:#34495e;">Asset Latency <i class="fa fa-globe"></i></a>
+		    	<a class="project" href="https://play.google.com/store/apps/details?id=io.sjostrom.flashcards&hl=en" style="background-color:#3498db;">Flash Cards <i class="fa fa-android"></i></a>
+		    	<a class="project" href="https://github.com/anothrNick/site-source" style="background-color:#9b59b6;">Site Source <i class="fa fa-android"></i></a>
+		    </div>
+		  </div>
 		  
 		</main>
-
-		<!-- Designed by Freepik -->
-		<span class="ci">
-			<img src="construct.png"/><br/>
-			<a href="http://www.freepik.com/free-photos-vectors/background">Background vector designed by Freepik</a>
-		</span>
 
         <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
