--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 			main {
 			  	background: white;
-			  	height: 100%;
+			  	min-height: 100%;
 			  	width: 100%;
 			  	display: flex;
 			  	justify-content: center;
