--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 			}
 
 			.project {
-				background-color: #EEE;
+				background-color: #FFF;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				font-size: 20px;
-				color: #EEE;
+				color: #5D5D5D;
 				border-bottom: 4px solid transparent;
 				transition: border-color .5s;
 				border-radius: 2px;
@@ -99,7 +99,6 @@
 			.project:hover{
 				cursor: pointer;
 				text-decoration: none;
-				color: #EEE;
 				border-color: rgba(0,0,0,.2);
 			}
 
@@ -126,25 +125,16 @@
   
 		  <div class="content">
 		     <h1 class="title">Nicholas Sjostrom</h1>
+		     <p style="text-align: center;color: AAA;">Software Developer, Rock Climber, Dad, Human.</p>
 		     <p class="title">
 		     	<a href="mailto:nick@sjostrom.io"><i class="fa fa-envelope"></i></a>
 		     	<a href="https://github.com/anothrNick"><i class="fa fa-github"></i></a>
 		     	<a href="https://www.linkedin.com/in/nicksjostrom"><i class="fa fa-linkedin"></i></a>
 		     	<a href="https://twitter.com/nickShosh"><i class="fa fa-twitter"></i></a>
 		    </p>
-
-		    <div class="projects">
-		    	<a class="project" href="https://pingpongpal.com" style="background-color:#16a085;">Ping Pong Pal <i class="fa fa-globe"></i></a>
-		    	<a class="project" href="https://res.sjostrom.io" style="background-color:#34495e;">Asset Latency <i class="fa fa-globe"></i></a>
-		    	<a class="project" href="https://play.google.com/store/apps/details?id=io.sjostrom.flashcards&hl=en" style="background-color:#3498db;">Flash Cards <i class="fa fa-android"></i></a>
-		    	<a class="project" href="https://github.com/anothrNick/site-source" style="background-color:#9b59b6;">Site Source <i class="fa fa-android"></i></a>
-		    </div>
 		  </div>
 		  
 		</main>
-
-        <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.4.min.js"><\/script>')</script>
 
     </body>
 </html>
